style: fixed tree position in the skills component - added calculation of position based on the alignment of the main component (Techs)

--- a/src/components/Sections/Skills/Techs/styles.module.css
+++ b/src/components/Sections/Skills/Techs/styles.module.css
@@ -2,7 +2,8 @@
   position: relative;
   display: flex;
   align-items: center;
-  max-width: var(--spacing-size-620);
+  align-self: var(--align-self) !important;
+  border: 1px solid red;
 }
 
 .mainContent {
@@ -10,10 +11,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  align-self: var(--align-self);
   gap: var(--spacing-size-32);
-  width: 100%;
   z-index: var(--zindex-100);
+  max-width: var(--spacing-size-620);
+  width: 100%;
 }
 
 .symbolContainer {
@@ -61,4 +62,14 @@
   align-items: center;
   justify-content: center;
   gap: var(--spacing-size-40);
+}
+
+.tree {
+  position: absolute;
+  top: 50%;
+  left: var(--tree-left);
+  right: var(--tree-right);
+  transform: translateY(-50%) rotate(var(--tree-direction));
+  width: auto;
+  height: var(--spacing-size-160);
 }
